--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
 				* {box-sizing: border-box;}
 				body {margin: 0; padding: 0; font-family: sans-serif;}
-				.header {position: fixed; width: 30%; height: 100%; background: url(bg2.jpg); background-size: cover; background-repeat: no-repeat; margin: 0; padding: 150px 50px; text-align: right;}
+				.header {position: fixed; width: 30%; height: 100%; background: url(https://user-images.githubusercontent.com/40930967/42417553-0afc8d8e-82c0-11e8-9dc9-6cba928f5036.jpg); background-size: cover; background-repeat: no-repeat; margin: 0; padding: 150px 50px; text-align: right;}
 				.header img {width: 100px; height: 100px; border-radius: 50%}
 				.header h3 { font-family: 'Kaushan Script', cursive; font-size: 40px; color: #fff; }
 				.header ul li { list-style: none; margin-top: 30px;}
@@ -40,7 +40,7 @@
 				/*------------------------------------------------- Smart Fone---------------------------------------------------------------------*/
 				@media (max-width: 768px) {
 					body {margin: 0; padding: 0; font-family: sans-serif;}
-					.header {position: relative; width: 100%; background: url(bg2.jpg); background-size: cover; background-repeat: no-repeat; margin: 0; padding: 50px 20px; text-align: center;}
+					.header {position: relative; width: 100%; background: url(https://user-images.githubusercontent.com/40930967/42417553-0afc8d8e-82c0-11e8-9dc9-6cba928f5036.jpg); background-size: cover; background-repeat: no-repeat; margin: 0; padding: 50px 20px; text-align: center;}
 					.header img {width: 100px; height: 100px; border-radius: 50%}
 					.header h3 { font-family: 'Kaushan Script', cursive; font-size: 40px; color: #fff; }
 					.header ul li { list-style: none; margin-top: 20px;}
@@ -66,7 +66,7 @@
 </head>
 <body>
 	<div class="header">
-		<img src="logo2.jpg">
+		<img src="https://user-images.githubusercontent.com/40930967/42417545-be062044-82bf-11e8-9a6b-ffd979ea5426.jpg">
 		<h3>I'm Ngo Thanh Van<br>Lives at Taiwan<br>Have a nice day</h3>
 		<ul>	<li><a href="#">Home</a></li>
 				<li><a href="#">Blog</a></li>
@@ -77,43 +77,43 @@
 	<div class="content">
 		<h1>Nếu cố gắng để trở nên tốt đẹp hơn<br>Thì mọi thứ xung quanh ta cũng sẽ tốt đẹp hơn.</h1>
 		<div class="imgBox"><img src="img2/img5.jpg"></div>		
-		<ul class="thumb">  <li><a href="img2/img1.jpg" target="imgBox"><img src="img2/img1.jpg" width="120px"></a></li>
-							<li><a href="img2/img2.jpg" target="imgBox"><img src="img2/img2.jpg" width="120px"></a></li>
-							<li><a href="img2/img3.jpg" target="imgBox"><img src="img2/img3.jpg" width="120px"></a></li>
-							<li><a href="img2/img4.jpg" target="imgBox"><img src="img2/img4.jpg" width="120px"></a></li>
-							<li><a href="img2/img5.jpg" target="imgBox"><img src="img2/img5.jpg" width="120px"></a></li>
-							<li><a href="img2/img6.jpg" target="imgBox"><img src="img2/img6.jpg" width="120px"></a></li>
-							<li><a href="img2/img7.jpg" target="imgBox"><img src="img2/img7.jpg" width="120px"></a></li> </ul>				
-		<ul class="thumb">	<li><a href="img2/img8.jpg" target="imgBox"><img src="img2/img8.jpg" width="120px"></a></li>
-							<li><a href="img2/img9.jpg" target="imgBox"><img src="img2/img9.jpg" width="120px"></a></li>
-							<li><a href="img2/img10.jpg" target="imgBox"><img src="img2/img10.jpg" width="120px"></a></li>
-							<li><a href="img2/img11.jpg" target="imgBox"><img src="img2/img11.jpg" width="120px"></a></li>
-							<li><a href="img2/img12.jpg" target="imgBox"><img src="img2/img12.jpg" width="120px"></a></li>
-							<li><a href="img2/img13.jpg" target="imgBox"><img src="img2/img13.jpg" width="120px"></a></li>
-							<li><a href="img2/img14.jpg" target="imgBox"><img src="img2/img14.jpg" width="120px"></a></li> </ul>
+		<ul class="thumb">  <li><a href="https://user-images.githubusercontent.com/40930967/42417569-66921a1a-82c0-11e8-8b7b-2e6837e19e02.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417569-66921a1a-82c0-11e8-8b7b-2e6837e19e02.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417589-b8ff7310-82c0-11e8-8a75-8c88f42a88d1.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417589-b8ff7310-82c0-11e8-8a75-8c88f42a88d1.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417600-15152b86-82c1-11e8-9384-61198c58df21.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417600-15152b86-82c1-11e8-9384-61198c58df21.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417617-3ac03308-82c1-11e8-90d5-5e7ba6c19552.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417617-3ac03308-82c1-11e8-90d5-5e7ba6c19552.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417621-63054650-82c1-11e8-8cbc-8e60b018b48a.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417621-63054650-82c1-11e8-8cbc-8e60b018b48a.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417634-944b060a-82c1-11e8-9ce9-48fbc9c5f679.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417634-944b060a-82c1-11e8-9ce9-48fbc9c5f679.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417638-b0a35f32-82c1-11e8-9578-f0702da53ad2.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417638-b0a35f32-82c1-11e8-9578-f0702da53ad2.jpg" width="120px"></a></li> </ul>				
+		<ul class="thumb">  <li><a href="https://user-images.githubusercontent.com/40930967/42417641-cbc756a6-82c1-11e8-9afd-3fbf685e6b78.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417641-cbc756a6-82c1-11e8-9afd-3fbf685e6b78.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417645-e952c08e-82c1-11e8-8db2-688621a02271.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417645-e952c08e-82c1-11e8-8db2-688621a02271.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417650-05f5fb52-82c2-11e8-8a5a-587dc13ce50e.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417650-05f5fb52-82c2-11e8-8a5a-587dc13ce50e.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417655-201edd46-82c2-11e8-951c-0a6050211d3a.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417655-201edd46-82c2-11e8-951c-0a6050211d3a.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417657-3bbf65fc-82c2-11e8-8a4e-f6b3f0c59883.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417657-3bbf65fc-82c2-11e8-8a4e-f6b3f0c59883.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417672-a20dc3e4-82c2-11e8-955a-2fa838727a94.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417672-a20dc3e4-82c2-11e8-955a-2fa838727a94.jpg" width="120px"></a></li>
+				    <li><a href="https://user-images.githubusercontent.com/40930967/42417681-c0848a60-82c2-11e8-8900-593180e5aa7a.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417681-c0848a60-82c2-11e8-8900-593180e5aa7a.jpg" width="120px"></a></li> </ul>
 		<div class="blog">
 			<div class="baner"><h1>Góc nhìn cuộc sống</h1></div>
 			<section class="sec1">
 				<p><b>Làng cổ Cửu Phần</b><br><br>
 				Cái tên Cửu Phần của thị trấn xuất phát từ giai đoạn đầu thời Nhà Thanh, khi ngôi làng miền núi này chỉ có chín hộ dân. Cửu Phần bắt đầu trở nên đông đúc vào cuối đời Nhà Thanh khi việc nghề khai thác vàng trở nên phổ biến ở hòn đảo này, đặc biệt là từ năm 1890 khi công nhân phát hiện ra vụn vàng khi xây dựg tuyến đường sắt Đài Bắc-Cơ Long chạy qua gần khu vực Cửu Phần và năm 1893 khi khu đãi vàng dưới chân các ngọn đồi của Cửu Phần bắt đầu tìm được vàng với sản lượng tới vài kg một ngày.</p>
-				<a href="#"><img src="img2/Jiufen.jpg"></a>
+				<a href="#"><img src="https://user-images.githubusercontent.com/40930967/42417692-02ef6c30-82c3-11e8-9bd0-b0c2de2214e6.jpg"></a>
 			</section>
 			<section class="sec1">
 				<p><b>Lần đầu đi tàu ở Đài Loan</b><br><br>
 				Để sử dụng tàu cao tốc, bạn nên sử dụng bản đồ Đài Loan có danh sách ga tàu bằng giấy phát ở sân bay hoặc các điểm du lịch. Tàu cao tốc THSR liên kết các thành phố ở khu vực bờ Tây Đài Loan, dọc Đài Bắc đến tận thành phố Cao Hùng Đài Loan và qua nhiều thành phố khác. Tàu cao tốc đi nhanh hơn tàu đường sắt truyền thống (300km/h), mức giá vé đương nhiên sẽ cao hơn. Chỉ với bản đồ ga tàu Đài Loan trong tay, bạn hoàn toàn có thể đi du lịch từ phía Bắc đến phía nam chỉ trong một ngày thôi nhé.</p>
-				<a href="#"><img src="img2/img15.jpg"></a>
+				<a href="#"><img src="https://user-images.githubusercontent.com/40930967/42417697-1dd17340-82c3-11e8-90eb-e727c9346b13.jpg"></a>
 			</section><section class="sec1">
 				<p><b>Công viên Giương Minh Sơn</b><br><br>
 				Ngoài việc tận hưởng thiên nhiên trong lành, rực rỡ sắc hoa, ngắm và ngâm mình trong những dòng suối nước nóng nhiều khoáng chất để tăng cường sức khỏe cũng là hoạt động rất được du khách yêu chuộng mỗi khi có dịp đến tham quan công viên Dương Minh Sơn.Do địa hình đặc trưng của núi lửa, nên Dương Minh Sơn quy tụ đến 13 khu vực địa nhiệt độc đáo, với các lỗ phun khí nóng lộ thiên nồng nặc mùi lưu huỳnh. Đây cũng được xem là 1 trong những điểm tham quan công viên quốc gia rất thú vị.</p>
-				<a href="#"><img src="img2/gms.jpg"></a>
+				<a href="#"><img src="https://user-images.githubusercontent.com/40930967/42417702-3d43d966-82c3-11e8-90b6-b99af7e15dd1.jpg"></a>
 			</section><section class="sec1">
 				<p><b>Chợ đêm Sỹ Lâm</b><br><br>
 				Chợ đêm Sĩ Lâm được chia làm 2 khu vực: khu ẩm thực và khu hàng hóa. Những quầy hàng quanh nhà hát Dương Minh truyền thống và đền thờ Chi Cheng nằm trên đường Tá Nam chuyên bán hàng hóa. Tại đây, bạn có thể tìm mua nhiều mặt hàng đa dạng về chủng loại, mẫu mã như quần áo, mũ nón, giày dép, những sản phẩm và phụ kiện cho tóc với mức giá khá rẻ.Chợ đêm Sĩ Lâm nổi tiếng với hàng loạt các món ăn như: Hot dog nếp kẹp xúc xích, bánh bao Xiao Long Bao, trứng tráng hàu, gà phi lê chiên, trà sữa chân trâu, xúc xích cỡ đại Sĩ Lâm, đậu phụ thối…</p>
-				<a href="#"><img src="img2/sl.jpg"></a>
+				<a href="#"><img src="https://user-images.githubusercontent.com/40930967/42417708-54b72bca-82c3-11e8-844b-ec7ba89bbe05.jpg"></a>
 			</section><section class="sec1">
 				<p><b>Thành phố Đài Bắc</b><br><br>
 				Đài Bắc là trung tâm chính trị, kinh tế, văn hóa của Đài Loan. Đại học Quốc lập Đài Loan nằm tại Đài Bắc, cũng như Bảo tàng Cố cung Quốc lập, vốn là nơi có một trong những bộ sưu tập cổ vật và thư họa Trung Hoa lớn nhất trên thế giới. Đài Bắc được coi là một thành phố toàn cầu, và là một phần của một vùng kỹ nghệ chính. Tàu hỏa, tàu cao tốc, quốc lộ, sân bay và các tuyến xe khách kết nối Đài Bắc với tất cả các nơi khác trên toàn Đài Loan. Nhu cầu hàng không của thành phố được đáp ứng bới hai sân bay - Sân bay Tùng Sơn và Sân bay Đào Viên.</p>
-				<a href="#"><img src="img2/tp.jpg"></a>
+				<a href="#"><img src="https://user-images.githubusercontent.com/40930967/42417715-7289f452-82c3-11e8-8034-8fe1e67838ed.jpg"></a>
 			</section>
 		</div>						
 	</div>
