--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	</div>
 	<div class="content">
 		<h1>Nếu cố gắng để trở nên tốt đẹp hơn<br>Thì mọi thứ xung quanh ta cũng sẽ tốt đẹp hơn.</h1>
-		<div class="imgBox"><img src="img2/img5.jpg"></div>		
+		<div class="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417569-66921a1a-82c0-11e8-8b7b-2e6837e19e02.jpg"></div>		
 		<ul class="thumb">  <li><a href="https://user-images.githubusercontent.com/40930967/42417569-66921a1a-82c0-11e8-8b7b-2e6837e19e02.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417569-66921a1a-82c0-11e8-8b7b-2e6837e19e02.jpg" width="120px"></a></li>
 				    <li><a href="https://user-images.githubusercontent.com/40930967/42417589-b8ff7310-82c0-11e8-8a75-8c88f42a88d1.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417589-b8ff7310-82c0-11e8-8a75-8c88f42a88d1.jpg" width="120px"></a></li>
 				    <li><a href="https://user-images.githubusercontent.com/40930967/42417600-15152b86-82c1-11e8-9384-61198c58df21.jpg" target="imgBox"><img src="https://user-images.githubusercontent.com/40930967/42417600-15152b86-82c1-11e8-9384-61198c58df21.jpg" width="120px"></a></li>
