--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<img src="https://user-images.githubusercontent.com/40930967/42417545-be062044-82bf-11e8-9a6b-ffd979ea5426.jpg">
 		<h3>I'm Ngo Thanh Van<br>Lives at Taiwan<br>Have a nice day</h3>
 		<ul>	<li><a href="#">Home</a></li>
-				<li><a href="#">Blog</a></li>
+				<li><a href="https://van-designer.github.io/blog/">Blog</a></li>
 				<li><a href="https://www.facebook.com/profile.php?id=100025015758403"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
 				<li><a href="#"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i></a></li>     </ul>	
 		<p>Thanks for visiting my blog</p>
